[package]
name = "blink"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv-rt = "0.11.0"
panic-halt = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.ch32v3]
version = "0.1.6"
features = ["ch32v30x", "critical-section"]

[dependencies.riscv]
version = "0.10.1"
features = ["critical-section-single-hart"]

[build]
target = "riscv32imac-unknown-none-elf"
